# AIR_project_25

./: .gitignore  CITATION.cff  README.md  pyproject.toml
task4/: requirements.txt
task4/subtask_4b/: getting_started_subtask4b.ipynb
task4/subtask_4b/neural_reranking_approach/: getting_started_subtask4b.ipynb  lora.ipynb  neural_reranking.ipynb  predictions.tsv  predictions_baseline_dev.tsv  predictions_test.tsv  reranking_gpt.ipynb
task4/subtask_4b/openai/: embedding_gpt.ipynb  predictions_embedding_gpt.tsv
task4/subtask_4b/represenation_learning_approach/: representation_learning.ipynb  representation_learning_fine_tuned.ipynb  representation_learning_sven.ipynb  specter2_base.ipynb
task4/subtask_4b/test_different_algos/: ms-marco-MiniLM-L6-v2.ipynb  specter2_base.ipynb
task4/subtask_4b/traditional_ir_model/: ir_model.ipynb  tfidf_predictions.tsv
